<resources>
    <string name="app_name">艾数抢红包</string>
    <string name="accessibility_description">抢红包服务</string>
    <string name="splash_open_now">马上开启</string>
    <string name="splash_already_read">我已阅读并同意</string>
    <string name="splash_protocol"><b>《用户协议》</b></string>
    <!--<string name="splash_protocol">Html.fromHtml(""+"《用户协议》"+"")</string>-->

    <!--main-->
    <string name="main_setting">设置</string>
    <string name="main_start">开始</string>
    <string name="main_pause">暂停</string>
    <string name="main_lucky_money_tips">已抢红包金额(元)</string>
    <string name="main_lucky_money_count">0</string>

    <string name="main_check_permission">找到%s，然后开启服务即可</string>
    <string name="main_lucky_money_picking">努力抢红包中...</string>

    <string name="setting_title">设置</string>
    <string name="setting_open_Accessibility">开启辅助功能</string>
    <string name="setting_stability">加强软件稳定性</string>
    <string name="setting_open_auto_start">开启自启动</string>
    <string name="setting_delay_time">设置延迟时间</string>
    <string name="setting_mute_notification">红包免打扰</string>
    <string name="setting_delay_time_not_null">延迟时间不能为空</string>
    <string name="setting_delay_time_must_be_number">延迟时间必须为数字</string>
    <string name="setting_open_auto_start_permission">开启自启动权限</string>

    <string name="setting_is_notify_sound">开启红包提示音</string>
    <string name="setting_return_to_home">抢完后返回桌面</string>


    <string name="mute_title">免打扰设置</string>
    <string name="mute_tips">您可以根据生活工作时间，设置不抢红包时间段，设置后每日相应时间段内系统会自动停止抢红包，时间段外会自动恢复</string>
    <string name="mute_set_mute_time">设置免打扰时间</string>

    <string name="mute_add_mute_time">添加</string>
    <string name="mute_ok_mute_time">确定</string>












    <string name="set_ok">设置成功</string>
    <string name="dialog_ok">好</string>
    <string name="dialog_cancle">取消</string>
    <string name="second">秒</string>
    <string name="hour">:</string>
    <string name="millisecond">毫秒</string>

</resources>
