<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/spreash3"
    android:paddingBottom="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_splash_open_now"
            android:paddingLeft="@dimen/padding_btn"
            android:paddingRight="@dimen/padding_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yellow_btn"
            android:text="@string/splash_open_now"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/little_margin"
            >
            <CheckBox
                android:id="@+id/cb_splash_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_checkbox"
                android:checked="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_already_read"
                android:textColor="@color/white"
                android:layout_margin="@dimen/little_margin"/>
            <TextView
                android:id="@+id/tv_splash_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_protocol"
                android:autoLink="all"
                android:textColor="@color/yellow1"/>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
