<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/actionBar"
            layout="@layout/action_bar"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mute_tips"
                android:textColor="@color/black"
                android:textSize="@dimen/common_text_size" />

            <LinearLayout
                android:id="@+id/ll_mute_time_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    android:id="@+id/item_time_origin"
                    layout="@layout/item_mute_time_set"></include>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mute_item_margin"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/btn_mute_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mute_add_mute_time" />

                <Button
                    android:id="@+id/btn_mute_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mute_ok_mute_time" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>